--- a/sharoni/src/components/Home/Home.css
+++ b/sharoni/src/components/Home/Home.css
@@ -4,30 +4,33 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1500px;
-
 }
 
 .home_row {
-
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 80%;
     margin: 0 auto;
     z-index: 1;
-    
+    grid-gap:20px;
 }
 @media (max-width:767px) {
     .home_row{
     margin-top: 100px;
     grid-template-columns: repeat(2, 1fr);
     width: 90%;
+    grid-gap:10px;
+
     }
 }
 @media (max-width:450px) {
     .home_row{
-    margin-top: 100px;
-    grid-template-columns: repeat(1, 1fr);
+    vertical-align:baseline;
+    margin-top: 150px;
+    grid-template-columns: repeat(2, 1fr);
     width: 90%;
+    grid-gap:5px
+
     }
 }
 .home_image{
